force-app/main/default/objects/QuickBook_Metadata__mdt/QuickBook_Metadata__mdt.object-meta.xml
<CustomObject>
    <label>QuickBook Metadata</label>
    <pluralLabel>QuickBook Metadata</pluralLabel>
</CustomObject>