force-app/main/default/objects/QuickBook_Metadata__mdt/fields/LastUpdated__c.field-meta.xml
<CustomField>
    <fullName>LastUpdated__c</fullName>
    <label>Last Updated</label>
    <type>DateTime</type>
</CustomField>